# Hand_tracking

./: CMakeLists.txt  Otchet.docx  README.md  hand2.py  main.launch  package.xml
