<?xml version="1.0"?>
<package format="2">
    <name>hand_track</name>
    <version>0.0.0</version>
    <description>The hand_track package</description>
    <maintainer email="we@mail.ru">we</maintainer>
    <license>TODO</license>

    <buildtool_depend>catkin</buildtool_depend>
    <depend>rospy</depend>
    <depend>geometry_msgs</depend>

    <export>
    </export>
</package>
